--- a/SpecflowTests/SpecflowTests.csproj
+++ b/SpecflowTests/SpecflowTests.csproj
@@ -33,8 +33,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Tests\CommonFramework\CommonFramework.csproj" />
-    <ProjectReference Include="..\Tests\PageObject\PageObject.csproj" />
+    <ProjectReference Include="..\CommonFramework\CommonFramework.csproj" />
+    <ProjectReference Include="..\PageObject\PageObject.csproj" />
   </ItemGroup>
 
 </Project>
